gitops/clusters/old/app01/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app01
  namespace: app01
  labels:
    app.kubernetes.io/name: app01
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app01
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app01
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo:6.15.0@sha256:ec73780a8425f59ea49f5bc8cdff0d598805a224fbaa1f86c67a244f250fa9da
          command:
            - ./podinfo
            - --port=9898
            - --level=info
          ports:
            - name: http
              containerPort: 9898
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
