gitops/clusters/old/app01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app01
  namespace: app01
spec:
  selector:
    app.kubernetes.io/name: app01
  ports:
    - name: http
      port: 80
      targetPort: http
